# Secure_ESP32_Soil_Moisture_poc

./: .gitignore  README.md  esp-idf-docker.sh  esp-idf-docker_dev.env  esp-idf.dockerfile
output_data/: README.md
private/: .gitignore  README.txt
private_example/: README.txt  create_certificates.vars
python_tools/: .gitignore  Dockerfile  README.md  controller-meta-data.json  controller_meta_data.py  python_tools_console.sh  requirements.txt  requirements_2.0.txt  sensor-meta-data.json  sensor_meta_data.py  sensors.json  soilmoisture_config_utils.py  soilmoisture_graph.py  watch_selected_data.py  watch_selected_data_asyncio-FAIL.py  watch_selected_data_asyncio.py
snippets/: CMakeLists.txt  emulated_system_calls.cpp  emulated_system_calls.hpp  fast_array_average.hpp  lightweight_1p1c_queue.hpp  lightweight_semaphore.hpp  main.cpp  test-bash-loop.sh
tools/: create_client_certificates.sh  create_client_uuid.py  nvs_flash.py  (+2 more)
top-level-components/secure_esp32_client/main/: CMakeLists.txt  KalmanFilter_1D.cpp  KalmanFilter_1D.hpp  KalmanStatistics.hpp  Kconfig.projbuild  app_config.cpp  app_config.hpp  app_event_loop.c  app_event_loop.h  app_events.h  app_globals.h  app_main.c  app_main.cpp  app_mqtt311.c  app_mqtt311.h  app_mqtt50.c  app_mqtt50.cpp  app_mqtt50.h  app_mqtt50_init.c  app_sntp_sync_time.c  app_sntp_sync_time.h  app_timer.c  app_timer.h  app_touch_pads.c  app_touch_pads.cpp  app_touch_pads.h  app_wifi_station.c  app_wifi_station.h  component.mk  fast_array_average.hpp  lightweight_1p1c_queue.hpp  nonvolatile_storage.csv  wifi_station.c  wifi_station.h
(+30 files in other folders)
